--- a/index.html
+++ b/index.html
@@ -8,9 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="background">
     <script src="main.js"></script>
-    <h1>Hi!!!</h1>
+    <h1>Enjoy Looking At These Photo's!!!</h1>
+    <div><img src="CloseUp_Flower.webp"></div>
+    <div>Enjoy the beautiful flowers 🌼🌼🌼</div>
+    <br>
+    <br>
+    <br>
+    <div><img src="Sunset_Deer.jpg"</div>
+        <div> The calming deer in the sunset 🦌</div>
+        <br>
+        <br>
+        <br>
+        <div><img src="Lake_Mountains.jpg"</div>
+            <div> A gourgeous lake 🌊</div>
+        <br>
+        <br>
+        <br>
+            <div> <img src="Green_Trees.jpg"</div>
+                <div>The lush green tree's 🌲🌲🌲</div>
+                <br>
+                <br>
+                <button onclick="ClickMe()">Click Me!!!!</button>
+            
 </body>
 
 </html>
