--- a/index.html
+++ b/index.html
@@ -4,34 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Project 57</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body id="background">
-    <script src="main.js"></script>
-    <h1>Enjoy Looking At These Photo's!!!</h1>
-    <div><img src="CloseUp_Flower.webp"></div>
-    <div>Enjoy the beautiful flowers 🌼🌼🌼</div>
-    <br>
-    <br>
-    <br>
-    <div><img src="Sunset_Deer.jpg"</div>
-        <div> The calming deer in the sunset 🦌</div>
+<body id="Body">
+    <section id="HobbyR">
+        <h1>My Favortie Hobby!</h1>
+        <h2>Reading Books</h2>
         <br>
         <br>
-        <br>
-        <div><img src="Lake_Mountains.jpg"</div>
-            <div> A gourgeous lake 🌊</div>
-        <br>
-        <br>
-        <br>
-            <div> <img src="Green_Trees.jpg"</div>
-                <div>The lush green tree's 🌲🌲🌲</div>
-                <br>
-                <br>
-                <button onclick="ClickMe()">Click Me!!!!</button>
-            
+        <div id="line"></div>
+        <p>I love to read books! Reading books is very calming to me and I usually do it sometimes in school, and after school. Also I like to read in my closet because there is a ramp I can rest my back on while I read!</p>
+    </section>
 </body>
 
 </html>
