--- a/index.html
+++ b/index.html
@@ -9,14 +9,35 @@
 </head>
 
 <body id="Body">
-    <section id="HobbyR">
         <h1>My Favortie Hobby!</h1>
         <h2>Reading Books</h2>
-        <br>
-        <br>
         <div id="line"></div>
-        <p>I love to read books! Reading books is very calming to me and I usually do it sometimes in school, and after school. Also I like to read in my closet because there is a ramp I can rest my back on while I read!</p>
-    </section>
+        <p>I love to read books! Reading books is very calming to me and I usually do it sometimes in school, and after school. Also I like to read in my closet because there is a ramp I can rest my back on while I read! I love to read Wings Of Fire, I find it very interesting. It is about these 5 dragonets stopping a big war. This is why I love to read! 😀</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 
 </html>
