--- a/index.html
+++ b/index.html
@@ -4,40 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 57</title>
+    <title>Project 58</title>   
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body id="Body">
-        <h1>My Favortie Hobby!</h1>
-        <h2>Reading Books</h2>
-        <div id="line"></div>
-        <p>I love to read books! Reading books is very calming to me and I usually do it sometimes in school, and after school. Also I like to read in my closet because there is a ramp I can rest my back on while I read! I love to read Wings Of Fire, I find it very interesting. It is about these 5 dragonets stopping a big war. This is why I love to read! 😀</p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+<body>
+    <ul class="menu">
+        <li class="list">Home</li>
+        <li class="list">Academics</li>
+        <li class="list">Students</li>
+        <li class="list">Admission</li>
+        <li class="list">Contact Us</li>
+    </ul>
+    <l>My School</l>
+    <img>
 </body>
 
 </html>
