--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 58</title>   
+    <title>Project 58</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body id="Hi">
     <ul class="menu">
         <li class="list">Home</li>
         <li class="list">Academics</li>
@@ -16,8 +18,26 @@
         <li class="list">Admission</li>
         <li class="list">Contact Us</li>
     </ul>
-    <l>My School</l>
-    <img>
+    <div id="SchoolS">
+        <h1 id="lbl">My School</h1>
+        <img id="Img" src="school.png">
+        <p>My school Is Pleasant Valley Elementry School, AKA PV. I am in 5th grade, and my teacher is Mr. Laraia. There are 3 more different teachers in 5th grade too! This school is lots of fun and they plan cool activities. I really like my school Pleasant Valley!!!!</p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 
 </html>
